# treeffuser

./: .gitignore  pixi.toml  pyproject.toml
benchmarks/: README.md  __init__.py  baselines.py  datasets.py  harness.py  metrics.py  run.py  select_probabilistic_baseline_hyperparams.py  variants.py
benchmarks/configs/: conformal_comparison.yaml  flow_matching_sweep.yaml  flow_path_sweep.yaml  fm_t_sampling_sweep.yaml  ode_vs_sde_path_ablation.yaml  paper_probabilistic_baselines.yaml  paper_probabilistic_baselines_selected.yaml  paper_real_data.yaml  paper_real_data_v2.yaml  real_smoke.yaml  residualizer_fm_sweep.yaml  sde_lower_stoch_sweep.yaml  sde_schedule_sweep.yaml  smoke.yaml  stochastic_fm_sweep.yaml  stochasticity_schedule_sweep.yaml  synthetic_core.yaml  tail_calibration_full.yaml  tuning_manifest.yaml
benchmarks/configs/probabilistic_baseline_hyperparams/: card.yaml
benchmarks/results/raw/: .gitkeep
benchmarks/results/selected/: probabilistic_baseline_hyperparams.json  probabilistic_baseline_hyperparams.md  wilcoxon_headline.md
benchmarks/results/toy_geometry_study/: capacity_summary.json  per_slice_summary.json  summary.json  target_scale_summary.json
benchmarks/results/tuning/: batch_status.jsonl
benchmarks/results/tuning/best_params/: california_housing__card.yaml  california_housing__catboost_uncertainty.yaml  california_housing__deep_ensemble.yaml  california_housing__ibug.yaml  california_housing__ngboost.yaml  california_housing__qreg_lightgbm.yaml  california_housing__treeffuser_fm.yaml  california_housing__treeffuser_published.yaml  california_housing__treeffuser_score_plus.yaml  concrete__card.yaml  concrete__catboost_uncertainty.yaml  concrete__deep_ensemble.yaml  concrete__ibug.yaml  concrete__ngboost.yaml  concrete__qreg_lightgbm.yaml  concrete__treeffuser_fm.yaml  concrete__treeffuser_published.yaml  concrete__treeffuser_score_plus.yaml  diabetes__card.yaml  diabetes__catboost_uncertainty.yaml  diabetes__deep_ensemble.yaml  diabetes__ibug.yaml  diabetes__ngboost.yaml  diabetes__qreg_lightgbm.yaml  diabetes__treeffuser_fm.yaml  diabetes__treeffuser_published.yaml  diabetes__treeffuser_score_plus.yaml  energy__card.yaml  energy__ibug.yaml  (+61 more)
benchmarks/scripts/: toy_geometry_study.py  wilcoxon_headline.py
benchmarks/tuning/: evaluate.py  manifest.py  objective.py  preflight.py  search_spaces.py  splits.py  study.py
paper/: refs.bib  tpm2026-main.tex  tpm2026-template.tex  tpm2026.cls  uai2026-main.tex  uai2026-template.bib  uai2026-template.tex  uai2026.cls
src/treeffuser/: _base_tabular_diffusion.py  _flow_matching.py  _score_models.py  treeffuser.py
tests/: test_benchmark_metrics.py  test_flow_matching.py  test_score_models.py  test_treeffuser.py
(+90 files in other folders)
