[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treeffuser"
version = "0.1.3"
description = "Probabilistic predictions for tabular data, using diffusion models and decision trees."
authors = [
    { name = "Nicolas Beltran-Velez", email = "nb2838@columbia.edu" },
    { name = "Alessandro Antonio Grande", email = "alessandro.grande@columbia.edu" },
    { name = "Achille Nazaret", email = "achille.nazaret@gmail.com" },
]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jaxtyping",
    "einops",
    "scipy",
    "tqdm",
    "lightgbm",
    "ml-collections",
    "scikit-learn",
    "pandas",
]

[project.urls]
homepage = "https://blei-lab.github.io/treeffuser/"
repository = "https://github.com/blei-lab/treeffuser"

[tool.hatch.build.targets.wheel]
packages = ["src/treeffuser"]

[tool.hatch.build.targets.sdist]
include = [
    "src/treeffuser",
    "pyproject.toml",
    "AUTHORS.md",
    "README.md",
    "LICENSE",
]

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff]
extend-exclude = ["static", "ci/templates", "testbed/notebooks/*", "testbed/*/_card_repo/*"]
line-length = 95
src = ["src", "tests", "benchmarks"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I001", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
    "F722", # Syntax error (issue with jaxtyping)
    "F821", # Issue with jax typing
    "PT006", # flake8-pytest-style fixture-final-use
    "UP037", # do not remove quotes around annotations (when __future__.annotations is imported)
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.black]
line-length = 95
target-version = ["py310"]

[tool.ruff.format]
indent-style="space"

[tool.pytest.ini_options]
pythonpath = "src"
